# BiggerRegularizedCategorical

./: .env_template  .gitignore  pyproject.toml  run_experiments.py  train.py
entropy/: .env_entropy  README.md  get_shell.sh  last_logs.sh  run_many.py  smoke.sbatch  submit.sbatch  train.sbatch
jaxrl/: normalizer.py  replay_buffer.py  utils.py
jaxrl/agent/: brc_learner.py  update.py
jaxrl/agent/networks/: __init__.py  common.py
plot_scripts/: draw_plot.py  step_vs_performance_plots.py
results/: score_normalization.py
results/dmc/BRC_multitask/: dog-run.npy  dog-stand.npy  dog-trot.npy  dog-walk.npy  humanoid-run.npy  humanoid-stand.npy  humanoid-walk.npy
results/dmc/BRC_singletask/: dog-run.npy  dog-stand.npy  dog-trot.npy  dog-walk.npy  humanoid-run.npy  humanoid-stand.npy  humanoid-walk.npy
results/humanoidbench/BRC_multitask/: h1-crawl-v0.npy  h1-hurdle-v0.npy  h1-maze-v0.npy  h1-pole-v0.npy  h1-run-v0.npy  h1-slide-v0.npy  h1-stair-v0.npy  h1-stand-v0.npy  h1-walk-v0.npy
results/humanoidbench/BRC_singletask/: h1-crawl-v0.npy  h1-hurdle-v0.npy  h1-maze-v0.npy  h1-pole-v0.npy  h1-run-v0.npy  h1-slide-v0.npy  h1-stair-v0.npy  h1-stand-v0.npy  h1-walk-v0.npy
results/humanoidbench_hard/BRC_multitask/: h1hand-balance_hard-v0.npy  h1hand-balance_simple-v0.npy  h1hand-basketball-v0.npy  h1hand-bookshelf_hard-v0.npy  h1hand-bookshelf_simple-v0.npy  h1hand-cabinet-v0.npy  h1hand-crawl-v0.npy  h1hand-cube-v0.npy  h1hand-door-v0.npy  h1hand-hurdle-v0.npy  h1hand-insert_normal-v0.npy  h1hand-insert_small-v0.npy  (+16 more)
scripts/: count_critic_params.py
(+725 files in other folders)
