[project]
name = "biggerregularizedcategorical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "distrax",
    "dm-control",
    "flax",
    "gymnasium==0.29.1",
    "imageio",
    "matplotlib",
    "jax[cuda12-pip]==0.4.35",
    "ml-collections",
    "numpy==1.26.4",
    "python-dotenv",
    "scipy==1.12.0",
    "shimmy",
    "tqdm>=4.67.3",
    "wandb[media]",
]
